Fix selected line not showing up in table view

--- a/modules/st2-flex-table/style.less
+++ b/modules/st2-flex-table/style.less
@@ -111,7 +111,7 @@
       background-color: @gray-white;
     }
 
-    &--active,
+    &&--active,
     &&--active:hover { // Specificity of 0030
       background-color: @blue-dark;
       color: white;
